--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    font-family: 'Roboto Condensed';
+    font-family: 'Roboto Condensed', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .navbar {
