--- a/assets/css/standings.css
+++ b/assets/css/standings.css
@@ -1,3 +1,10 @@
+body {
+    margin: 0;
+    padding: 0;
+    background: #f7f7f7;
+    color: #222;
+}
+
 h1 {
     text-align: center;
     margin-bottom: 30px;
